Changed settings to launch in VS Code

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lite": "lite-server",
     "copy:src": "copyfiles -u 1 src/**/*.js src/**/*.css src/**/*.html dist",
     "start": "rimraf dist && npm run copy:src && tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
+    "build": "rimraf dist && npm run copy:src && tsc && concurrently \"npm run tsc:w\"",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "typings": "typings"
