--- a/package.json
+++ b/package.json
@@ -29,32 +29,34 @@
     "typings": "typings"
   },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.5",
-    "@angular/compiler": "2.0.0-rc.5",
-    "@angular/core": "2.0.0-rc.5",
-    "@angular/forms": "0.3.0",
-    "@angular/http": "2.0.0-rc.5",
-    "@angular/platform-browser": "2.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
-    "@angular/router": "3.0.0-rc.1",
-    "angular2-in-memory-web-api": "0.0.15",
+    "@angular/common": "2.0.0-rc.6",
+    "@angular/compiler": "2.0.0-rc.6",
+    "@angular/compiler-cli": "0.6.0",
+    "@angular/core": "2.0.0-rc.6",
+    "@angular/forms": "2.0.0-rc.6",
+    "@angular/http": "2.0.0-rc.6",
+    "@angular/platform-browser": "2.0.0-rc.6",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
+    "@angular/router": "3.0.0-rc.2",
+    "@angular/upgrade": "2.0.0-rc.6",
+    "angular2-in-memory-web-api": "0.0.18",
     "bootstrap": "^3.3.7",
-    "core-js": "^2.4.0",
+    "core-js": "^2.4.1",
     "jquery": "^2.2.4",
     "reflect-metadata": "0.1.3",
-    "rxjs": "5.0.0-beta.6",
-    "zone.js": "^0.6.12"
+    "rxjs": "5.0.0-beta.11",
+    "systemjs": "0.19.27",
+    "zone.js": "^0.6.17"
   },
   "devDependencies": {
     "codelyzer": "0.0.19",
     "rimraf": "^2.5.2",
-    "concurrently": "^2.0.0",
+    "concurrently": "^2.2.0",
     "copyfiles": "^1.0.0",
     "lite-server": "^2.2.2",
-    "systemjs": "0.19.27",
     "tslint": "^3.13.0",
     "typescript": "^1.8.10",
-    "typings": "^1.3.0"
+    "typings": "^1.3.2"
   },
   "license": "MIT"
 }
