--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "lint": "tslint \"src/**/*.ts\"",
     "postinstall": "typings install",
-    "test": "karma start",
+    "test": "tsc && concurrently \"npm run tsc:w\" \"karma start karma.conf.js\" ",
     "lite": "lite-server",
     "copy:src": "copyfiles -u 1 src/**/*.js src/**/*.css src/**/*.html dist",
     "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
@@ -52,6 +52,11 @@
     "codelyzer": "0.0.19",
     "concurrently": "^2.2.0",
     "copyfiles": "^1.0.0",
+    "jasmine-core": "2.5.1",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-htmlfile-reporter": "^0.3.4",
+    "karma-jasmine": "^1.0.2",
     "lite-server": "^2.2.2",
     "rimraf": "^2.5.2",
     "tslint": "^3.15.1",
