--- a/package.json
+++ b/package.json
@@ -35,7 +35,11 @@
     "@angular/platform-browser": "2.0.0-rc.6",
     "@angular/platform-browser-dynamic": "2.0.0-rc.6",
     "@angular/router": "3.0.0-rc.2",
+    "angular2-in-memory-web-api": "0.0.18",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "jquery": "^3.1.0",
+    "ng2-bootstrap": "^1.1.2",
     "rxjs": "5.0.0-beta.11",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.17"
