--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,4 +4,6 @@
         "**/*.js": {"when": "$(basename).ts"},
         "**/*.js.map": {"when": "$(basename)"}
     }
+,
+"typescript.check.workspaceVersion": false
 }
